# direct_product

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt  basics.cpp  normed.cpp  own_types.cpp
include/: direct_product.hpp
